# IBDTimeSeries

./: .gitignore  AccProx.py  README.md  analytic.py  analytic_multi.py  optimization.py  plot.py  plot_utility.py  pyproject.toml  test.ipynb  ts_utility.py  ts_utility_crossCoal.py  ts_utility_wholeGenome.py  tweakIBD.py  tweakIBD_helper.py
error_model_utility/: manipulateBAM.py
miscellaneous/: AccProx.py  README  estCrossCoal.py  ts_utility_crossCoal.py
package/: CHANGELOG.md  README.md  pyproject.toml
package/TTNe/: AccProx.py  analytic.py  analytic_multi.py  inference_utility.py  optimization.py  plot.py  run.py
package/TTNe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
package/TTNe/simulation/: ts_utility.py  ts_utility_wholeGenome.py  tweakIBD.py  tweakIBD_helper.py
simulation/: README  tweakIBD_helper.py
test/: README  time.e1484452  time.o1484452
test/input/: BN.TP2.8cM.ibd.tsv  BN.TP2.sample.age  chr.all.start_end  mask.track
test/output/: Ne.csv  cv.trace.pickle
test/output_full/: Ne.csv  cv.trace.pickle
